RESOLVED FIXED24938
--no-svg has build problems
https://bugs.webkit.org/show_bug.cgi?id=24938
Summary --no-svg has build problems
Greg Bolsinga
Reported 2009-03-30 10:15:44 PDT
When building with: ./WebKitTools/Scripts/build-webkit --no-svg --no-svg-animation --no-svg-filters --no-svg-foreign-object --no-svg-fonts --no-svg-as-image --no-svg-use there are build errors. This fixes the compilation problems. The WebCore.xcode project is copying DOMHTMLFrameElementPrivate.h and DOMHTMLIFrameElementPrivate.h. These are only generated when building ENABLE_SVG. I am not sure of the best way to conditionally copy those header files.
Attachments
This patch addresses the build problems (7.71 KB, patch)
2009-03-30 10:16 PDT, Greg Bolsinga
simon.fraser: review+
Build fixes for building --3d-rendering and --no-svg (976 bytes, patch)
2009-03-30 11:26 PDT, Greg Bolsinga
simon.fraser: review+
sorted switch statement (1.56 KB, patch)
2009-03-30 12:42 PDT, Greg Bolsinga
simon.fraser: review+
Greg Bolsinga
Comment 1 2009-03-30 10:16:11 PDT
Created attachment 29075 [details] This patch addresses the build problems
Simon Fraser (smfr)
Comment 2 2009-03-30 10:29:03 PDT
Comment on attachment 29075 [details] This patch addresses the build problems => case CSSPropertyWebkitTextStroke: > case CSSPropertyWebkitTransition: > case CSSPropertyWebkitVariableDeclarationBlock: > + case CSSPropertyWebkitPerspectiveOriginX: > + case CSSPropertyWebkitPerspectiveOriginY: > + case CSSPropertyWebkitTransformOriginX: > + case CSSPropertyWebkitTransformOriginY: > + case CSSPropertyWebkitTransformOriginZ: I think these were left out on purpose. We don't want authors to get style for 'transform-origin-x' etc, just the compound property 'transform-origin'. > Index: WebCore/css/CSSParser.cpp > =================================================================== > --- WebCore/css/CSSParser.cpp (revision 42106) > +++ WebCore/css/CSSParser.cpp (working copy) > @@ -1625,6 +1625,7 @@ bool CSSParser::parseValue(int propId, b > case CSSPropertyTextLineThrough: > case CSSPropertyTextOverline: > case CSSPropertyTextUnderline: > + case CSSPropertyWebkitVariableDeclarationBlock: > return false; I don't see enough context to know if this is correct. I belive CSS variables are disabled now anyway. > Index: WebCore/css/CSSStyleSelector.cpp > =================================================================== > --- WebCore/css/CSSStyleSelector.cpp (revision 42106) > +++ WebCore/css/CSSStyleSelector.cpp (working copy) > @@ -5185,6 +5185,7 @@ void CSSStyleSelector::applyProperty(int > case CSSPropertyWebkitPaddingStart: > case CSSPropertyWebkitTextDecorationsInEffect: > case CSSPropertyWebkitTextStroke: > + case CSSPropertyWebkitVariableDeclarationBlock: Ditto.
Simon Fraser (smfr)
Comment 3 2009-03-30 10:32:54 PDT
(In reply to comment #2) > (From update of attachment 29075 [details] [review]) > => case CSSPropertyWebkitTextStroke: > > case CSSPropertyWebkitTransition: > > case CSSPropertyWebkitVariableDeclarationBlock: > > + case CSSPropertyWebkitPerspectiveOriginX: > > + case CSSPropertyWebkitPerspectiveOriginY: > > + case CSSPropertyWebkitTransformOriginX: > > + case CSSPropertyWebkitTransformOriginY: > > + case CSSPropertyWebkitTransformOriginZ: > > I think these were left out on purpose. We don't want authors to get style for > 'transform-origin-x' etc, just the compound property 'transform-origin'. Never mind, these are fine. Stupid svg 'default' statement.
Greg Bolsinga
Comment 4 2009-03-30 11:04:53 PDT
bolsinga:WebKit bolsinga$ svn commit Sending WebCore/ChangeLog Sending WebCore/css/CSSComputedStyleDeclaration.cpp Sending WebCore/css/CSSCursorImageValue.cpp Sending WebCore/css/CSSParser.cpp Sending WebCore/css/CSSStyleSelector.cpp Sending WebCore/dom/Node.cpp Sending WebCore/platform/graphics/Font.cpp Sending WebCore/platform/graphics/SimpleFontData.cpp Sending WebKit/mac/ChangeLog Sending WebKit/mac/MigrateHeaders.make Transmitting file data .......... Committed revision 42112.
Greg Bolsinga
Comment 5 2009-03-30 11:26:06 PDT
Created attachment 29079 [details] Build fixes for building --3d-rendering and --no-svg
Greg Bolsinga
Comment 6 2009-03-30 11:33:56 PDT
bolsinga:WebKit bolsinga$ svn commit Sending WebCore/ChangeLog Sending WebCore/rendering/RenderLayerBacking.cpp Transmitting file data .. Committed revision 42115.
Darin Adler
Comment 7 2009-03-30 12:07:50 PDT
Comment on attachment 29075 [details] This patch addresses the build problems > case CSSPropertyWebkitTextStroke: > case CSSPropertyWebkitTransition: > case CSSPropertyWebkitVariableDeclarationBlock: > + case CSSPropertyWebkitPerspectiveOriginX: > + case CSSPropertyWebkitPerspectiveOriginY: > + case CSSPropertyWebkitTransformOriginX: > + case CSSPropertyWebkitTransformOriginY: > + case CSSPropertyWebkitTransformOriginZ: Should be sorted alphabetically. Same for other switch statements in the patch that are currently sorted. Please don't add the first non-sorted items.
Greg Bolsinga
Comment 8 2009-03-30 12:42:58 PDT
Created attachment 29081 [details] sorted switch statement The other switch statements are sorted within their "return false" groupings.
Greg Bolsinga
Comment 9 2009-03-30 12:43:15 PDT
Re-opening for new review.
Greg Bolsinga
Comment 10 2009-03-30 13:00:13 PDT
bolsinga:WebKit bolsinga$ svn commit Sending WebCore/ChangeLog Sending WebCore/css/CSSComputedStyleDeclaration.cpp Transmitting file data .. Committed revision 42116.
Note You need to log in before you can comment on or make changes to this bug.