2009-03-30  Greg Bolsinga  <bolsinga@apple.com>

Reviewed by Simon Fraser.

        https://bugs.webkit.org/show_bug.cgi?id=24938

        Build fixes when building --no-svg

        * css/CSSComputedStyleDeclaration.cpp:
        (WebCore::CSSComputedStyleDeclaration::getPropertyCSSValue): Add missing CSS properties
        * css/CSSCursorImageValue.cpp:
        (WebCore::CSSCursorImageValue::updateIfSVGCursorIsUsed): Handle unused param
        * css/CSSParser.cpp:
        (WebCore::CSSParser::parseValue): Add missing CSS properties
        * css/CSSStyleSelector.cpp:
        (WebCore::CSSStyleSelector::applyProperty): Add missing CSS properties
        * dom/Node.cpp:
        (WebCore::updateSVGElementInstancesAfterEventListenerChange): Handle unused param
        * platform/graphics/Font.cpp:
        (WebCore::Font::floatWidth): Handle unused param
        * platform/graphics/SimpleFontData.cpp:
        (WebCore::SimpleFontData::SimpleFontData): Handle unused param

2009-03-30  Greg Bolsinga  <bolsinga@apple.com>

        Reviewed by Simon Fraser.

        https://bugs.webkit.org/show_bug.cgi?id=24938

        Build fixes when building --no-svg

        DOMHTMLFrameElementPrivate.h and DOMHTMLIFrameElementPrivate.h are only available with ENABLE_SVG.

        * MigrateHeaders.make:



Canonical link: https://commits.webkit.org/34168@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@42112 268f45cc-cd09-0410-ab3c-d52691b4dbfc